Added description, added categories into navbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="Wave Digital">
+  <meta name="description" content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita.">
+  <meta name="author" content="Wave Digital - Web Agency Verona">
 
   <title>Wave Digital - Web Agency Verona</title>
 
@@ -40,12 +40,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <!--li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#features">Web Agency</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
-          </li-->
+            <a class="nav-link js-scroll-trigger" href="#features">Creazione siti web</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#features">Posizionamento SEO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#features">Web Marketing</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contatti</a>
           </li>
@@ -100,8 +106,8 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <h2>Tantissime soluzioni per la tua Azienda</h2>
+        <p class="text-muted">I nostri servizi:</p>
         <hr>
       </div>
       <div class="row">
