--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita.">
+  <meta name="description"
+    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita.">
   <meta name="author" content="Wave Digital - Web Agency Verona">
 
   <title>Wave Digital - Web Agency Verona</title>
@@ -34,7 +35,9 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Wave Digital</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -66,7 +69,8 @@
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5">Fai decollare la tua azienda!<br>Scegli la nostra Web Agency a Verona!</h1>
-            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del tuo sito web!</a>
+            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
+              tuo sito web!</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -107,7 +111,7 @@
     <div class="container">
       <div class="section-heading text-center">
         <h2>Tantissime soluzioni per la tua Azienda</h2>
-        <p class="text-muted">I nostri servizi:</p>
+        <p class="text-muted">I servizi della nostra Web Agency:</p>
         <hr>
       </div>
       <div class="row">
@@ -116,68 +120,74 @@
             <div class="device-mockup iphone6_plus portrait white">
               <div class="device">
                 <div class="screen"-->
-                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <!--img src="img/demo-screen-1.png" class="img-fluid" alt="">
+        <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+        <!--img src="img/demo-screen-1.png" class="img-fluid" alt="">
                 </div>
                 <div class="button"-->
-                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                <!--/div>
+        <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+        <!--/div>
               </div>
             </div>
           </div-->
-        </div>
-        <div class="col-lg-12 my-auto">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <i class="icon-screen-desktop text-primary"></i>
-                  <h3>Realizzazione siti web</h3>
-                  <p class="text-muted">Realizziamo siti web con cms proprietario. Completamente costruiti da zero e personalizzabili al 100%</p>
-                  <!--a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Scopri di più!</a-->
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <i class="icon-energy text-primary"></i>
-                  <h3>Posizionamento SEO</h3>
-                  <p class="text-muted">Eseguiamo ottimizzazione SEO e posizionamento su tutti i motori di ricerca come Google per siti, e-commerce e blog</p>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <i class="icon-graph text-primary"></i>
-                  <h3>Digital Strategy - Web Marketing</h3>
-                  <p class="text-muted">Analizziamo insieme a te la tua azienda e ti proporremo un strategia digitale su misura per te</p>
-                </div>
+      </div>
+      <div class="col-lg-12 my-auto">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="feature-item">
+                <i class="icon-screen-desktop text-primary"></i>
+                <h3>Realizzazione siti web</h3>
+                <p class="text-muted">Realizziamo siti web con cms proprietario. Completamente costruiti da zero e
+                  personalizzabili al 100%</p>
+                <!--a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Scopri di più!</a-->
               </div>
             </div>
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <i class="icon-magnet text-primary"></i>
-                  <h3>Campagne Google ADS</h3>
-                  <p class="text-muted">Creiamo e gestiamo campagne Google ADS, analizzeremo i dati per garantirti il migliore risultato</p>
-                </div>
+            <div class="col-lg-4">
+              <div class="feature-item">
+                <i class="icon-energy text-primary"></i>
+                <h3>Posizionamento SEO</h3>
+                <p class="text-muted">Eseguiamo ottimizzazione SEO e posizionamento su tutti i motori di ricerca come
+                  Google per siti, e-commerce e blog</p>
               </div>
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <i class="icon-social-facebook text-primary"></i>
-                  <h3>Campagne Facebook & Instagram ADS</h3>
-                  <p class="text-muted">Studiamo ad hoc la migliore strategia per la tua azienda e gestiamo le tue campagne Facebook e Instagram</p>
-                </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="feature-item">
+                <i class="icon-graph text-primary"></i>
+                <h3>Digital Strategy - Web Marketing</h3>
+                <p class="text-muted">Analizziamo insieme a te la tua azienda e ti proporremo un strategia digitale su
+                  misura per te</p>
               </div>
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <i class="icon-pencil text-primary"></i>
-                  <h3>Studio Grafico</h3>
-                  <p class="text-muted">Realizziamo volantini, loghi, manifesti ecc. Creiamo la tua immagine aziendale coordinata</p>
-                </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="feature-item">
+                <i class="icon-magnet text-primary"></i>
+                <h3>Campagne Google ADS</h3>
+                <p class="text-muted">Creiamo e gestiamo campagne Google ADS, analizzeremo i dati per garantirti il
+                  migliore risultato</p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="feature-item">
+                <i class="icon-social-facebook text-primary"></i>
+                <h3>Campagne Facebook & Instagram ADS</h3>
+                <p class="text-muted">Studiamo ad hoc la migliore strategia per la tua azienda e gestiamo le tue
+                  campagne Facebook e Instagram</p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="feature-item">
+                <i class="icon-pencil text-primary"></i>
+                <h3>Studio Grafico</h3>
+                <p class="text-muted">Realizziamo volantini, loghi, manifesti ecc. Creiamo la tua immagine aziendale
+                  coordinata</p>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -193,14 +203,28 @@
 
   <section class="contact bg-primary" id="contact">
 
-	<div class="container">
+    <div class="container">
 
-		<div class="section-heading text-center">
-        	<h2>Contattaci!</h2>
-        	<hr><br><br>
-      	</div>
+      <div class="section-heading text-center">
+        <h2>Contattaci!</h2>
+        <hr><br><br>
+      </div>
+      <div class="">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="feature-item">
+              <i class="icon-social-facebook text-primary"></i> <a>+39 348 6983468</a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="feature-item">
+              <i class="icon-social-facebook text-primary"></i> info@wavedigital.it
+            </div>
+          </div>
+        </div>
+      </div>
 
-		<form>
+      <!--form>
 		  <div class="form-group">
 		  	<div class="row">
 				<div class="col">
@@ -220,14 +244,15 @@
 			</div>
 		  </div>
 		  <button type="submit" class="btn btn-primary">Invia</button>
-		</form>
-	</div>
+		<form-->
+    </div>
 
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; Wave Digital <script type="text/javascript"> document.write(new Date().getFullYear()); </script>. All Rights Reserved.</p>
+      <p>&copy; Wave Digital
+        <script type="text/javascript"> document.write(new Date().getFullYear()); </script>. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
