Added privacy, change navbar css

--- a/index.html
+++ b/index.html
@@ -3,13 +3,37 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="UTF-8">
+  <title>Wave Digital - Web Agency Verona - Siti Internet Verona</title>
   <meta name="description"
-    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita.">
-  <meta name="author" content="Wave Digital - Web Agency Verona">
+    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
+  <meta property="og:title" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
+  <meta property="og:description"
+    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
+  <meta property="og:image" content="../img/logo_fb.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
+  <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
+  <meta property="og:site_name" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="it_IT" />
 
-  <title>Wave Digital - Web Agency Verona</title>
+  <meta name="url" content="https://www.wavediigital.it/web-agency-verona">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="format-detection" content="telephone=no">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../icon/apple-touch-icon-144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x113" href="../icon/apple-touch-icon-114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../icon/apple-touch-icon-72.png">
+  <link rel="apple-touch-icon-precomposed" href="../icon/apple-touch-icon-57.png">
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
+  <link rel="dns-prefetch" href="//use.fontawesome.com">
+  <link rel="dns-prefetch" href="//cdn.fontawesome.com">
+
+  <meta name="author" content="Wave Digital - Web Agency Verona">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,23 +49,26 @@
   <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="css/new-age.min.css" rel="stylesheet">
+  <link href="css/new-age.css" rel="stylesheet">
 
   <!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-PWS97XX');</script>
-	<!-- End Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-PWS97XX');</script>
+  <!-- End Google Tag Manager -->
 
 </head>
 
 <body id="page-top">
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PWS97XX"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PWS97XX" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -50,11 +77,10 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
-        Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto align-items-center">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Web Agency</a>
           </li>
@@ -69,6 +95,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contatti</a>
+          </li>
+          <li class="nav-item d-block">
+            <a class="nav-link phone-link" href="tel:+393486983468"><i class="fas fa-phone"></i>&nbsp;+39 348
+              6983468</a>
           </li>
         </ul>
       </div>
@@ -262,6 +292,40 @@
   </section>
 
   <footer>
+    <!--div id="policy-privacy" class="d-flex flex-column flex-md-row justify-content-around align-items-center p-4">
+        <p class="text-center text-md-left">Questo sito usa i cookie per una navigazione più piacevole. <a href="privacy.php">Leggi informativa</a></p>
+          <div class="d-flex mt-2 mt-md-0">
+            <a class="m-2" href="#" onclick="setCookie()">ACCETTO</a><a class="m-2" href="#" onclick="setCookie()">Rifiuto</a>
+          </div>
+      </div-->
+    <div class="container py-5 py-md-0">
+      <div class="row">
+        <div class="col-12 col-lg-6 d-flex justify-content-center py-3 py-md-5">
+          <div class="footer-info text-center text-md-left">
+            <a class="site-link" href="https://www.wavedigital.it">
+              <p><strong>Wave Digital</strong></p>
+            </a>
+            <p><a href="" target="_blank">Verona</a></p>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6 d-flex justify-content-center py-3 py-md-5">
+          <div class="footer-info text-center text-md-left">
+            <p>Tel e Fax: <a href="tel:+393486983468">+39 348 6983468</a></p>
+            <p>email: <a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center">
+          <div class="footer-info">
+            <p><a href="https://www.wavedigital.it/privacy.html">POLICY PRIVACY</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!--footer>
     <div class="container">
       <p>&copy; Wave Digital
         <script type="text/javascript"> document.write(new Date().getFullYear()); </script>. All Rights Reserved.</p>
@@ -271,7 +335,7 @@
         </li>
       </ul>
     </div>
-  </footer>
+  </footer-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
