--- a/privacy.html
+++ b/privacy.html
@@ -122,7 +122,7 @@
                         <p style="text-align: center;"><strong>I - INFORMAZIONI RELATIVE ALLA PRIVACY POLICY DEL
                                 SITO</strong></p>
                         <p>1. In questa sezione si descrivono le modalit&agrave; di gestione del sito internet
-                            <span>www.presmetalspa.it</span> in riferimento al trattamento dei dati personali degli
+                            <span>www.wavedigital.it</span> in riferimento al trattamento dei dati personali degli
                             utenti che lo consultano. Il trattamento dei dati viene effettuato nel rispetto dei criteri
                             previsti dal regolamento europeo in materia di protezione dei dati personali, reg.
                             2016/679/UE e di ogni altro testo legislativo nazionale, provvedimento o autorizzazione
@@ -147,11 +147,11 @@
                             pubblica, il servizio o altro organismo che, singolarmente o insieme ad altri, determina le
                             finalit&agrave; e i mezzi del trattamento di dati personali. Si occupa anche dei profili
                             sulla sicurezza.</p>
-                        <p>2. Relativamente al presente sito web il titolare del trattamento &egrave; <strong>Mori
+                        <!--p>2. Relativamente al presente sito web il titolare del trattamento &egrave; <strong>Mori
                                 Angelo & C. s.n.c.</strong>, con sede legale in <strong>Via A.Doria, 4/A 37066
                                 Sommacampagna (Verona)</strong> e per ogni chiarimento o esercizio dei diritti
                             dell&#39;utente potr&agrave; contattarlo al seguente indirizzo mail
-                            <strong>info@moriangeloimpianti.it</strong>.&nbsp;</p>
+                            <strong>info@moriangeloimpianti.it</strong>.&nbsp;</p-->
                         <p style="text-align: center;"><strong>2 - Luogo trattamento dati</strong></p>
                         <p>1. I trattamenti connessi ai servizi web di questo sito hanno luogo presso la predetta sede
                             della Societ&agrave; (vedi punto titolare del trattamento dei dati) e sono curati dal
