--- a/privacy.html
+++ b/privacy.html
@@ -73,7 +73,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="www.wavedigital.it">Wave Digital</a>
+            <a class="navbar-brand js-scroll-trigger" href="/">Wave Digital</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -82,19 +82,19 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="www.wavedigital.it">Web Agency</a>
+                        <a class="nav-link js-scroll-trigger" href="/">Web Agency</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="www.wavedigital.it">Creazione siti web</a>
+                        <a class="nav-link js-scroll-trigger" href="/">Creazione siti web</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="www.wavedigital.it">Posizionamento SEO</a>
+                        <a class="nav-link js-scroll-trigger" href="/">Posizionamento SEO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="www.wavedigital.it">Web Marketing</a>
+                        <a class="nav-link js-scroll-trigger" href="/">Web Marketing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="www.wavedigital.it">Contatti</a>
+                        <a class="nav-link js-scroll-trigger" href="/">Contatti</a>
                     </li>
                     <li class="nav-item d-block">
                         <a class="nav-link phone-link" href="tel:+393486983468"><i class="fas fa-phone"></i>&nbsp;+39
