--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       <div class="row">
         <div class="col-12 d-flex justify-content-center">
           <div class="footer-info">
-            <p><a href="https://www.wavedigital.it/privacy.html">POLICY PRIVACY</a></p>
+            <p><a href="/privacy/">POLICY PRIVACY</a></p>
           </div>
         </div>
       </div>
