Fix Index, privacy, footer

--- a/index.html
+++ b/index.html
@@ -134,43 +134,13 @@
     </div>
   </header>
 
-  <!--section class="download bg-primary text-center" id="download">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 mx-auto">
-          <h2 class="section-heading">Discover what all the buzz is about!</h2>
-          <p>Our app is available on any mobile device! Download now to get started!</p>
-          <div class="badges">
-            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section-->
-
+  <!--I NOSTRI SERVIZI -->
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
         <h2>Tantissime soluzioni per la tua Azienda</h2>
         <p class="text-muted">I servizi della nostra Web Agency:</p>
         <hr>
-      </div>
-      <div class="row">
-        <!--div class="col-lg-4 my-auto">
-          <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
-              <div class="device">
-                <div class="screen"-->
-        <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-        <!--img src="img/demo-screen-1.png" class="img-fluid" alt="">
-                </div>
-                <div class="button"-->
-        <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-        <!--/div>
-              </div>
-            </div>
-          </div-->
       </div>
       <div class="col-lg-12 my-auto">
         <div class="container-fluid">
@@ -181,7 +151,6 @@
                 <h3>Realizzazione siti web</h3>
                 <p class="text-muted">Realizziamo siti web con cms proprietario. Completamente costruiti da zero e
                   personalizzabili al 100%</p>
-                <!--a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Scopri di più!</a-->
               </div>
             </div>
             <div class="col-lg-4">
@@ -231,122 +200,46 @@
       </div>
     </div>
     </div>
-  </section>
 
-  <!--section class="cta">
-    <div class="cta-content">
+    <!--SEZIONE CONTATTACI -->
+
+    <section class="features" id="contact">
       <div class="container">
-        <h2>Stop waiting.<br>Start building.</h2>
-        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
-      </div>
-    </div>
-    <div class="overlay"></div-->
-  </section>
-
-  <section class="contact bg-primary" id="contact">
-
-    <div class="container">
-
-      <div class="section-heading text-center">
-        <h2>Contattaci!</h2>
-        <hr><br><br>
-      </div>
-      <div class="">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="feature-item">
-              <i class="icon-social-facebook text-primary"></i> <a>+39 348 6983468</a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="feature-item">
-              <i class="icon-social-facebook text-primary"></i> info@wavedigital.it
+        <div class="section-heading text-center">
+          <h2>Contattaci</h2>
+          <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
+          <hr>
+        </div>
+        <div class="col-lg-12 my-auto">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="feature-item">
+                  <i class="icon-call-out text-primary"></i>
+                  <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="feature-item">
+                  <i class="icon-envelope text-primary"></i>
+                  <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
-      <!--form>
-		  <div class="form-group">
-		  	<div class="row">
-				<div class="col">
-					<input type="text" class="form-control" placeholder="Nome">
-				</div>
-				<div class="col">
-					<input type="text" class="form-control" placeholder="Indirizzo Sito web">
-				</div>
-			</div>
-			<div>
-				<label for="exampleInputEmail1"></label>
-		    	<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" required>
-			</div>
-			<div>
-				<label for="validationTextarea"></label>
-		    	<textarea class="form-control" id="validationTextarea" placeholder="Messaggio" required></textarea>
-			</div>
-		  </div>
-		  <button type="submit" class="btn btn-primary">Invia</button>
-		<form-->
+    </section>
+    <div class="container text-center">
+      <span>Copyright &copy; Wave Digital 2020 - <a href="/privacy/">Policy privacy</a></span>
     </div>
 
-  </section>
-
-  <footer>
-    <!--div id="policy-privacy" class="d-flex flex-column flex-md-row justify-content-around align-items-center p-4">
-        <p class="text-center text-md-left">Questo sito usa i cookie per una navigazione più piacevole. <a href="privacy.php">Leggi informativa</a></p>
-          <div class="d-flex mt-2 mt-md-0">
-            <a class="m-2" href="#" onclick="setCookie()">ACCETTO</a><a class="m-2" href="#" onclick="setCookie()">Rifiuto</a>
-          </div>
-      </div-->
-    <div class="container py-5 py-md-0">
-      <div class="row">
-        <div class="col-12 col-lg-6 d-flex justify-content-center py-3 py-md-5">
-          <div class="footer-info text-center text-md-left">
-            <a class="site-link" href="https://www.wavedigital.it">
-              <p><strong>Wave Digital</strong></p>
-            </a>
-            <p><a href="" target="_blank">Verona</a></p>
-          </div>
-        </div>
-        <div class="col-12 col-lg-6 d-flex justify-content-center py-3 py-md-5">
-          <div class="footer-info text-center text-md-left">
-            <p>Tel e Fax: <a href="tel:+393486983468">+39 348 6983468</a></p>
-            <p>email: <a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 d-flex justify-content-center">
-          <div class="footer-info">
-            <p><a href="/privacy/">POLICY PRIVACY</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <!--footer>
-    <div class="container">
-      <p>&copy; Wave Digital
-        <script type="text/javascript"> document.write(new Date().getFullYear()); </script>. All Rights Reserved.</p>
-      <ul class="list-inline">
-        <li class="list-inline-item">
-          <a href="#">Privacy</a>
-        </li>
-      </ul>
-    </div>
-  </footer-->
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/new-age.min.js"></script>
-
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="js/new-age.min.js"></script>
 </body>
-
 </html>
