--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,18 +4,18 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Wave Digital - Web Agency Verona - Siti Internet Verona</title>
+    <title>Policy Privacy - Wave Digital Verona</title>
     <meta name="description"
-        content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
-    <meta property="og:title" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
+        content="Policy Privacy - Wave Digital Verona" />
+    <meta property="og:title" content="Policy Privacy - Wave Digital Verona" />
     <meta property="og:description"
-        content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
+        content="Policy Privacy - Wave Digital Verona" />
     <meta property="og:image" content="../img/logo_fb.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-    <meta property="og:site_name" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
+    <meta property="og:site_name" content="Policy Privacy - Wave Digital Verona" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="it_IT" />
 
@@ -23,12 +23,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="format-detection" content="telephone=no">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../icon/apple-touch-icon-144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x113" href="../icon/apple-touch-icon-114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../icon/apple-touch-icon-72.png">
-    <link rel="apple-touch-icon-precomposed" href="../icon/apple-touch-icon-57.png">
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../icon/apple-touch-icon-144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x113" href="../../icon/apple-touch-icon-114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../icon/apple-touch-icon-72.png">
+    <link rel="apple-touch-icon-precomposed" href="../../icon/apple-touch-icon-57.png">
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
     <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
     <link rel="dns-prefetch" href="//use.fontawesome.com">
     <link rel="dns-prefetch" href="//cdn.fontawesome.com">
@@ -36,20 +36,20 @@
     <meta name="author" content="Wave Digital - Web Agency Verona">
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
+    <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../vendor/simple-line-icons/css/simple-line-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
+    <link rel="stylesheet" href="../device-mockups/device-mockups.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="css/new-age.css" rel="stylesheet">
+    <link href="../css/new-age.css" rel="stylesheet">
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
