Added new pages

--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -4,18 +4,18 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Wave Digital - Web Agency Verona - Siti Internet Verona</title>
+  <title>Web Marketing Verona | Digital Agency | Wave Digital</title>
   <meta name="description"
-    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
-  <meta property="og:title" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
+    content="Wave Digital" />
+  <meta property="og:title" content="Web Marketing Verona | Digital Agency | Wave Digital" />
   <meta property="og:description"
-    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
-  <meta property="og:image" content="../img/logo_fb.png" />
-  <meta property="og:image:type" content="image/png" />
+    content="Wave Digital" />
+  <meta property="og:image" content="../../img/logo_fb.png" />
+  <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-  <meta property="og:site_name" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
+  <meta property="og:site_name" content="Web Marketing Verona | Digital Agency | Wave Digital" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
 
@@ -23,12 +23,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="format-detection" content="telephone=no">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../icon/apple-touch-icon-144.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x113" href="../icon/apple-touch-icon-114.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../icon/apple-touch-icon-72.png">
-  <link rel="apple-touch-icon-precomposed" href="../icon/apple-touch-icon-57.png">
-  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-  <link rel="icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../icon/apple-touch-icon-144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x113" href="../../icon/apple-touch-icon-114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../icon/apple-touch-icon-72.png">
+  <link rel="apple-touch-icon-precomposed" href="../../icon/apple-touch-icon-57.png">
+  <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../../favicon.ico" type="image/x-icon">
   <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
   <link rel="dns-prefetch" href="//use.fontawesome.com">
   <link rel="dns-prefetch" href="//cdn.fontawesome.com">
@@ -36,20 +36,20 @@
   <meta name="author" content="Wave Digital - Web Agency Verona">
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
+  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../vendor/simple-line-icons/css/simple-line-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
   <!-- Plugin CSS -->
-  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
+  <link rel="stylesheet" href="../device-mockups/device-mockups.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="css/new-age.css" rel="stylesheet">
+  <link href="../css/new-age.css" rel="stylesheet">
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
@@ -110,7 +110,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Fai decollare la tua azienda!<br>Scegli la nostra Web Agency a Verona!</h1>
+            <h1 class="mb-5">Affidati a noi per la gestione del Web Amrketing!<br>Scegli la nostra Web Agency a Verona!</h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
               tuo sito web!</a>
           </div>
@@ -133,73 +133,6 @@
       </div>
     </div>
   </header>
-
-  <!--I NOSTRI SERVIZI -->
-  <section class="features" id="features">
-    <div class="container">
-      <div class="section-heading text-center">
-        <h2>Tantissime soluzioni per la tua Azienda</h2>
-        <p class="text-muted">I servizi della nostra Web Agency:</p>
-        <hr>
-      </div>
-      <div class="col-lg-12 my-auto">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="feature-item">
-                <i class="icon-screen-desktop text-primary"></i>
-                <h3>Realizzazione siti web</h3>
-                <p class="text-muted">Realizziamo siti web con cms proprietario. Completamente costruiti da zero e
-                  personalizzabili al 100%</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="feature-item">
-                <i class="icon-energy text-primary"></i>
-                <h3>Posizionamento SEO</h3>
-                <p class="text-muted">Eseguiamo ottimizzazione SEO e posizionamento su tutti i motori di ricerca come
-                  Google per siti, e-commerce e blog</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="feature-item">
-                <i class="icon-graph text-primary"></i>
-                <h3>Digital Strategy - Web Marketing</h3>
-                <p class="text-muted">Analizziamo insieme a te la tua azienda e ti proporremo un strategia digitale su
-                  misura per te</p>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="feature-item">
-                <i class="icon-magnet text-primary"></i>
-                <h3>Campagne Google ADS</h3>
-                <p class="text-muted">Creiamo e gestiamo campagne Google ADS, analizzeremo i dati per garantirti il
-                  migliore risultato</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="feature-item">
-                <i class="icon-social-facebook text-primary"></i>
-                <h3>Campagne Facebook & Instagram ADS</h3>
-                <p class="text-muted">Studiamo ad hoc la migliore strategia per la tua azienda e gestiamo le tue
-                  campagne Facebook e Instagram</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="feature-item">
-                <i class="icon-pencil text-primary"></i>
-                <h3>Studio Grafico</h3>
-                <p class="text-muted">Realizziamo volantini, loghi, manifesti ecc. Creiamo la tua immagine aziendale
-                  coordinata</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
 
     <!--SEZIONE CONTATTACI -->
 
