--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -110,7 +110,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Affidati a noi per la gestione del Web Amrketing!<br>Scegli la nostra Web Agency a Verona!</h1>
+            <h1 class="mb-5">Affidati a noi per la gestione del Web Marketing!<br>Scegli la nostra Web Agency a Verona!</h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
               tuo sito web!</a>
           </div>
