Aggiunta testo e immagine home page

--- a/index.html
+++ b/index.html
@@ -108,28 +108,26 @@
   <header class="masthead">
     <div class="container h-100">
       <div class="row h-100">
-        <div class="col-lg-7 my-auto">
+        <div class="col-lg-12 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5">Fai decollare la tua azienda!<br>Scegli la nostra Web Agency a Verona!</h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
               tuo sito web!</a>
           </div>
         </div>
-        <div class="col-lg-5 my-auto">
+        <!--div class="col-lg-5 my-auto">
           <div class="device-container">
             <div class="device-mockup iphone6_plus portrait white">
               <div class="device">
                 <div class="screen">
-                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                   <img src="img/demo-screen-1.png" class="img-fluid" alt="">
                 </div>
                 <div class="button">
-                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </div-->
       </div>
     </div>
   </header>
@@ -137,9 +135,29 @@
   <!--I NOSTRI SERVIZI -->
   <section class="features" id="features">
     <div class="container">
+      <div class="section-heading">
+        <h2 class="text-center">Tantissime soluzioni per la tua Azienda<br><span class="web-agency">Web Agency Verona</span></h2>
+        <p class="text-home">Siamo una delle migliori <b>Web Agency a Verona</b> di giovani professionisti appassionati di digitale.<br><br>
+          Siamo specializzati nella <b>creazione su misura di servizi digitali</b> sviluppati con le più moderne e avanzate
+          strategie
+          di web design, digital marketing, social media marketing, creazione e sviluppo di siti web ed ecommerce con
+          cms proprietari.<br><br>
+          Grazie alla nostra esperienza sapremo realizzare insieme a te un sito web in grado di portare <b>risultati e
+          generare vendite o contatti.</b>
+          Ogni progetto parte da un'attenta analisi della tua azienda per valutarne i punti di forza e i punti di
+          debolezza. <br>Successivamente
+          svilupperemo un'idea grafica in modo che sia la risposta più efficace alla digitalizzazione della tua
+          azienda. Il tuo sito web deve corrispondere al 100% all'immagine reale della tua azienda.<br><br>
+          Ogni progetto realizzato e ogni startegia di marketing che verrà adottata sarà <b>misurabile per poter avere
+          sotto controllo
+          tutti i dati che ci permettono di ottenere il tuo successo sul web.</b><br><br>
+          Realizzeremo il tuo sito web, ecommerce o gestionale a regola d'arte e con le <b>migliori tecnologie presenti sul
+          mercato</b> in modo che risponda
+          alle necessità del giorno d'oggi quali velocità e facilità di navigazione.
+        </p>
+      </div>
       <div class="section-heading text-center">
-        <h2>Tantissime soluzioni per la tua Azienda</h2>
-        <p class="text-muted">I servizi della nostra Web Agency:</p>
+        <h3 class="text-muted">I servizi della nostra Web Agency:</h3>
         <hr>
       </div>
       <div class="col-lg-12 my-auto">
@@ -199,15 +217,39 @@
         </div>
       </div>
     </div>
+
+    <!-- -->
+    <div class="container">
+      <div class="section-heading">
+        <h2 class="text-center">Il CMS della nostra Web Agency</h2>
+        <hr><br>
+        <img class="image-cms" src="img/cms.png"><br><br>
+        <p class="text-home">
+          Wave Manager è il <b>CMS proprietario della nostra Web Agency a Verona</b>, realizzato interamente da noi con le migliori tecnologie
+          e personalizzabile al 100% a seconda delle esigenze dell'azienda. <br><br>
+          Con il nostro CMS, i nostri clienti potranno modificare autonomamente il testo nelle pagine, inserire news, novità, immagini ecc.<br><br>
+          E' realizzato in modo da rendere il sito performante intermini di velocità e ottimizzato per rendere facile l'inserimento e la modifica
+          dei meta-tag per favorirne un <b>migliore posizionamento e indicizzazione sui motori di ricerca come Google e Bing.</b><br><br>
+          Attraverso un pannello presente nella dashboard è possibile inoltre controllare e monitorare in modo facile e veloce il numero di visite al sito
+          e poter vedere i messaggi inviati attraverso il form contatti del sito.<br><br>
+        </p>
+        <h3 class="text-muted text-center">Quanto costa fare un sito web?</h3>
+        <p class="text-home">
+          E' una delle domande che sentiamo più spesso e la risposta è... dipende.<br>
+          Ci sono moltissime cose da valutare: la complessità, il numero di pagine, l'inserimento di un blog ecc.<br><br>
+          Affidati alla nostra Web Agency, chiedici gratuitamente un preventivo per la realizzazione del tuo sito web o del tuo e-commerce.
+        </p>
+      </div>
     </div>
+    </section>
 
     <!--SEZIONE CONTATTACI -->
 
     <section class="features" id="contact">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Contattaci</h2>
-          <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
+          <h2>Condividi con noi la tua idea</h2>
+          <p class="text-muted">Parlaci della tua azienda e richiedici una consulenza gratuita</p>
           <hr>
         </div>
         <div class="col-lg-12 my-auto">
@@ -242,4 +284,5 @@
     <!-- Custom scripts for this template -->
     <script src="js/new-age.min.js"></script>
 </body>
+
 </html>
