--- a/index.html
+++ b/index.html
@@ -233,14 +233,32 @@
           Attraverso un pannello presente nella dashboard è possibile inoltre controllare e monitorare in modo facile e veloce il numero di visite al sito
           e poter vedere i messaggi inviati attraverso il form contatti del sito.<br><br>
         </p>
+        <div class="row">
+          <div class="col-lg-2"></div>
+          <div class="col-lg-4">
+            <div class="feature-item">
+              <img class="img-cms" src="img/node.png">
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="feature-item">
+              <img class="img-cms" src="img/html-css.png">
+            </div>
+          </div>
+          <div class="col-lg-2"></div>
+        </div>
         <h3 class="text-muted text-center">Quanto costa fare un sito web?</h3>
         <p class="text-home">
           E' una delle domande che sentiamo più spesso e la risposta è... dipende.<br>
           Ci sono moltissime cose da valutare: la complessità, il numero di pagine, l'inserimento di un blog ecc.<br><br>
           Affidati alla nostra Web Agency, chiedici gratuitamente un preventivo per la realizzazione del tuo sito web o del tuo e-commerce.
-        </p>
+        </p><br><br>
       </div>
     </div>
+    </section>
+
+    <section class="">
+      <h3 class="text-center text-muted"><i>RAFFORZA IL TUO BRAND CON UNA GRANDE PRESENZA DIGITALE</i></h3>
     </section>
 
     <!--SEZIONE CONTATTACI -->
