--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="it">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157587155-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157587155-1');
+  </script>
 
   <meta charset="UTF-8">
   <title>Wave Digital - Web Agency Verona - Siti Internet Verona</title>
